--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </strong>
         </h3>
     </footer>
-    <script src="./src/js/script.js"></script>
+    <script src="./dist/js/script.js"></script>
     <script src="https://unpkg.com/boxicons@2.1.2/dist/boxicons.js"></script>
 </body>
 </html>
