fix: adjust mobile

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 Lucas M. Souza | LM
             </strong>
         </h1>
-        <p class="header-profile__user">Desenvoldor Web | VTEX CMS | VTEX IO | HTML | CSS | SCSS | JavaScript | TypeScript | ReactJS |</p>
+        <p class="header-profile__user">Desenvoldor Web | VTEX CMS/IO | HTML | CSS | SCSS | JavaScript | TypeScript | ReactJS |</p>
     </header>
 
     <main class="container">
