feat: add WhatsApp block

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,12 +24,13 @@
     <!--Scroll Reveal-->
     <script src="https://unpkg.com/scrollreveal"></script>
 </head>
+
 <body>
     <header class="header-profile">
 
         <nav class="nav">
             <a href="#" class="nav__logo">
-                <img src="./src/assets/images/LM-icon.jpg" alt="Logotipo LM"/>
+                <img src="./src/assets/images/LM-icon.jpg" alt="Logotipo LM" />
             </a>
 
             <i class='bx bx-moon change-theme' id="theme-button"></i>
@@ -39,7 +41,8 @@
                 Lucas M. Souza | LM
             </strong>
         </h1>
-        <p class="header-profile__user">Desenvoldor Web | VTEX CMS/IO | HTML | CSS | SCSS | JavaScript | TypeScript | ReactJS |</p>
+        <p class="header-profile__user">Desenvoldor Web | VTEX CMS/IO | HTML | CSS | SCSS | JavaScript | TypeScript |
+            ReactJS |</p>
     </header>
 
     <main class="container">
@@ -62,10 +65,22 @@
         </section>
 
         <section class="social-network__links LM3">
-            <a class="social-network social-network__portfolio" href="https://drive.google.com/file/d/1boWwdSVD6QWZSYCYG7u6Lkzx_6FkD7Y3/view?usp=drivesdk" target="_blank">
+            <a class="social-network social-network__portfolio"
+                href="https://api.whatsapp.com/send/?phone=5511945451196" target="_blank">
+                <i class='bx bxl-whatsapp'></i>
+                <h2 class="social-network__text">
+                    WhatsApp
+                </h2>
+            </a>
+        </section>
+
+        <section class="social-network__links LM4">
+            <a class="social-network social-network__portfolio"
+                href="https://drive.google.com/file/d/1hrbrjYFM5_UDgeIL60eFI0p-RiU50CZo/view?usp=sharing"
+                target="_blank">
                 <i class='bx bx-briefcase'></i>
                 <h2 class="social-network__text">
-                    Currículo 
+                    Currículo
                 </h2>
             </a>
         </section>
@@ -73,7 +88,7 @@
 
     <footer class="container footer">
         <h3 class="footer__copyright">
-            Desenvolvido por: 
+            Desenvolvido por:
             <strong>
                 Lucas M. Souza | LM
             </strong>
@@ -82,4 +97,5 @@
     <script src="./dist/js/script.js"></script>
     <script src="https://unpkg.com/boxicons@2.1.2/dist/boxicons.js"></script>
 </body>
+
 </html>
